src/lexer/snapshots/ruasc__lexer__tests__trace.snap
---
source: src/lexer/tests.rs
expression: "Lexer::new(include_str!(\"../../samples/trace_hello_world.as\")).into_vec()"
---
- kind: Identifier
  span:
    start: 0
    end: 5
  raw: trace
- kind: OpenParen
  span:
    start: 5
    end: 6
  raw: (
- kind: String
  span:
    start: 6
    end: 19
  raw: Hello World
- kind: CloseParen
  span:
    start: 19
    end: 20
  raw: )
- kind: Semicolon
  span:
    start: 20
    end: 21
  raw: ;
- kind: Newline
  span:
    start: 21
    end: 22
  raw: "\n"
