src/lexer/snapshots/ruasc__lexer__tests__var.snap
---
source: src/lexer/tests.rs
expression: "Lexer::new(include_str!(\"../../samples/assign_variable_and_trace.as\")).into_vec()"
---
- kind:
    Keyword: Var
  span:
    start: 0
    end: 3
  raw: var
- kind: Identifier
  span:
    start: 4
    end: 11
  raw: message
- kind:
    BinaryOperator: Assign
  span:
    start: 12
    end: 13
  raw: "="
- kind: String
  span:
    start: 14
    end: 27
  raw: Hello World
- kind: Semicolon
  span:
    start: 27
    end: 28
  raw: ;
- kind: Newline
  span:
    start: 28
    end: 29
  raw: "\n"
- kind: Identifier
  span:
    start: 29
    end: 34
  raw: trace
- kind: OpenParen
  span:
    start: 34
    end: 35
  raw: (
- kind: Identifier
  span:
    start: 35
    end: 42
  raw: message
- kind: CloseParen
  span:
    start: 42
    end: 43
  raw: )
- kind: Semicolon
  span:
    start: 43
    end: 44
  raw: ;
- kind: Newline
  span:
    start: 44
    end: 45
  raw: "\n"
