src/lexer/snapshots/ruasc__lexer__tests__var_assignments.snap
---
source: src/lexer/tests.rs
expression: "Lexer::new(include_str!(\"../../samples/assign_variable_many_ways.as\")).into_vec()"
---
- kind:
    Keyword: Var
  span:
    start: 0
    end: 3
  raw: var
- kind: Identifier
  span:
    start: 4
    end: 11
  raw: message
- kind:
    BinaryOperator: Assign
  span:
    start: 12
    end: 13
  raw: "="
- kind: String
  span:
    start: 14
    end: 21
  raw: Hello
- kind:
    BinaryOperator: Add
  span:
    start: 22
    end: 23
  raw: +
- kind: String
  span:
    start: 24
    end: 27
  raw: " "
- kind: Semicolon
  span:
    start: 27
    end: 28
  raw: ;
- kind: Newline
  span:
    start: 28
    end: 29
  raw: "\n"
- kind: Identifier
  span:
    start: 29
    end: 36
  raw: message
- kind:
    BinaryOperator: AddAssign
  span:
    start: 37
    end: 39
  raw: +=
- kind: String
  span:
    start: 40
    end: 47
  raw: World
- kind: Semicolon
  span:
    start: 47
    end: 48
  raw: ;
- kind: Newline
  span:
    start: 48
    end: 49
  raw: "\n"
- kind: Identifier
  span:
    start: 49
    end: 56
  raw: message
- kind:
    BinaryOperator: Assign
  span:
    start: 57
    end: 58
  raw: "="
- kind: Identifier
  span:
    start: 59
    end: 66
  raw: message
- kind:
    BinaryOperator: Add
  span:
    start: 67
    end: 68
  raw: +
- kind: String
  span:
    start: 69
    end: 72
  raw: "!"
- kind: Semicolon
  span:
    start: 72
    end: 73
  raw: ;
- kind: Newline
  span:
    start: 73
    end: 74
  raw: "\n"
- kind: Identifier
  span:
    start: 74
    end: 79
  raw: trace
- kind: OpenParen
  span:
    start: 79
    end: 80
  raw: (
- kind: Identifier
  span:
    start: 80
    end: 87
  raw: message
- kind: CloseParen
  span:
    start: 87
    end: 88
  raw: )
- kind: Semicolon
  span:
    start: 88
    end: 89
  raw: ;
- kind: Newline
  span:
    start: 89
    end: 90
  raw: "\n"
